# docs/api/openapi-components-4.1.0.yaml
@@ -5415,6 +5415,7 @@ components:
       required:
       - accountId
       - membershipStatus
+      - revision
       - roles
       properties:
         accountId:
@@ -5422,6 +5423,9 @@ components:
           pattern: ^account-[0-9a-fA-F-]{36}$
         membershipStatus:
           const: active
+        revision:
+          type: integer
+          minimum: 0
         roles:
           type: array
           minItems: 1
